[gd_scene load_steps=4 format=3 uid="uid://ccc3amjfoo480"]

[ext_resource type="Script" path="res://Game/Objective/objective.gd" id="1_m3fks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jsjgx"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3i3ry"]

[node name="Objective" type="Marker2D"]
script = ExtResource("1_m3fks")

[node name="DetectArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("RectangleShape2D_jsjgx")

[node name="DetectInput" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="DetectInput"]
shape = SubResource("RectangleShape2D_3i3ry")

[connection signal="area_entered" from="DetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="body_entered" from="DetectInput" to="." method="_on_detect_input_body_entered"]
[connection signal="body_exited" from="DetectInput" to="." method="_on_detect_input_body_exited"]
